tests/NormalTests/paczka1/fuzzy1/40407920.err
Error in line 2: yzg S620 49,3
Error in line 8: tb2vz A827 -4,2
Error in line 25: A355 A355 56,6
Error in line 13: I9wP A355 70,1
